# GenieVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_deb.sh  yingjia
debian/: changelog  control  rules
docs/: DESIGN.md  vsphere_manager.md
docs/man/: genievm.1
include/backup/: backup_cli.hpp  backup_config.hpp  backup_job.hpp  backup_manager.hpp  backup_provider.hpp  backup_provider_factory.hpp  backup_scheduler.hpp  backup_verifier.hpp  disk_backup.hpp  job_manager.hpp  restore_job.hpp  verify_job.hpp  vm_config.hpp
include/backup/kvm/: cbt.hpp  cbt_factory.hpp  kvm_backup_provider.hpp  lvm_cbt.hpp  qcow2_cbt.hpp
include/backup/vmware/: vmware_backup_provider.hpp  vmware_connection.hpp
include/common/: backup_cli.hpp  backup_status.hpp  job.hpp  job_manager.hpp  logger.hpp  parallel_task_manager.hpp  scheduler.hpp  thread_utils.hpp  utils.hpp  vmware_connection.hpp  vsphere_manager.hpp  vsphere_rest_client.hpp  vsphere_types.hpp
include/main/: backup_main.hpp  restore_main.hpp
include/restore/: disk_restore.hpp  restore_manager.hpp
include/vddk_wrapper/: vddk_wrapper.h
scripts/: run_genievm.sh
src/: CMakeLists.txt
src/backup/: backup_cli.cpp  backup_job.cpp  backup_manager.cpp  backup_provider_factory.cpp  backup_scheduler.cpp  backup_verifier.cpp  disk_backup.cpp  job.cpp  job_manager.cpp  restore_job.cpp  verify_job.cpp
src/backup/common/: cbt_provider.hpp  disk_provider.hpp
src/backup/kvm/: cbt_factory.cpp  kvm_backup_provider.cpp  lvm_cbt.cpp  lvm_cbt.hpp  qcow2_cbt.cpp  qcow2_cbt.hpp  storage_detector.cpp  storage_detector.hpp
src/backup/vmware/: vmware_backup_provider.cpp
src/common/: backup_cli.cpp  job.cpp  job_manager.cpp  logger.cpp  parallel_task_manager.cpp  scheduler.cpp  scheduler.hpp  vmware_connection.cpp  vsphere_manager.cpp  vsphere_rest_client.cpp
src/main/: backup_main.cpp  main.cpp  restore_main.cpp
src/restore/: disk_restore.cpp  restore_job.cpp  restore_manager.cpp
src/restore/vmware/: disk_restore.cpp
src/vddk_wrapper/: vddk_wrapper.cpp
test/config/: test_config.json
test/scripts/: setup_test_env.sh  test_backup.sh
unittest/: CMakeLists.txt  backup_provider_test.cpp
